UI fix: Avoid tag summary to overflow tag file editor container and add some transitions. Add border to Inspector

--- a/resources/style/inspector.scss
+++ b/resources/style/inspector.scss
@@ -2,7 +2,8 @@
 #inspector {
   background-color: var(--background-color);
   overflow: hidden auto; // show a Y scrollbar if inspector is too small in height to fit min-height of its content
-
+  border-left: 0.0625rem solid var(--border-color);
+  padding-left: 0.2rem;
   display: flex;
   flex-direction: column;
 
